--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,7 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
     implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 }
